--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       relativePath: true,
       coverpage: true,
       loadNavbar: true,
+      fallbackLanguages: ['fr', 'de'],
       notFoundPage: true
     }
   </script>
