--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <div id="app">请稍等一会...</div>
   <script>
     window.$docsify = {
-      if (typeof navigator.serviceWorker !== 'undefined') {
-    navigator.serviceWorker.register('sw.js')
-    }
+      //<!--if(typeof navigator.serviceWorker !== 'undefined') {
+      //    navigator.serviceWorker.register('sw.js')
+      //}-->
       relativePath: true,
       coverpage: ['/', '/de/', '/fr/', '/ja/' , '/ru/', '/zh-cn/', '/zh-tw/'],
       loadNavbar: true,
